SM-13 cleaned branch, added translations files to nav&footer

--- a/public/locales/en/navFooter.json
+++ b/public/locales/en/navFooter.json
@@ -1,14 +1,8 @@
 {
-  "nav1": "Our services",
-  "nav2": "About us",
-  "login": "Login",
-  "register": "Register",
-  "account": "Reservations & Your profile",
-  "logout": "Log out",
-  "footer": {
-    "about": "About us",
-    "faq": "FAQ ",
-    "terms": "Terms of use",
-    "privacy": "Privacy policy"
-  }
+  "products": "products",
+  "about": "about me",
+  "service": "service",
+  "contact": "contact",
+  "contactData": "Contact data",
+  "admin": "Admin"
 }
