SM-13 footer added translations to footer

--- a/public/locales/en/navFooter.json
+++ b/public/locales/en/navFooter.json
@@ -3,6 +3,5 @@
   "about": "about me",
   "service": "service",
   "contact": "contact",
-  "contactData": "Contact data",
-  "admin": "Admin"
+  "contactData": "Contact data"
 }
