--- a/public/locales/pl/navFooter.json
+++ b/public/locales/pl/navFooter.json
@@ -3,6 +3,5 @@
   "about": "o mnie",
   "service": "serwis",
   "contact": "kontakt",
-  "contactData": "Dane kontaktowe",
-  "admin": "Admin"
+  "contactData": "Dane kontaktowe"
 }
