SM-33 Layout, styles and language json files

--- a/public/locales/en/navAndFooter.json
+++ b/public/locales/en/navAndFooter.json
@@ -3,5 +3,7 @@
   "about": "about me",
   "service": "service",
   "contact": "contact",
+  "login": "log in",
+  "cart": "your cart",
   "contactData": "Contact data"
 }
