--- a/public/locales/pl/navAndFooter.json
+++ b/public/locales/pl/navAndFooter.json
@@ -3,5 +3,7 @@
   "about": "o mnie",
   "service": "serwis",
   "contact": "kontakt",
+  "login": "zaloguj",
+  "cart": "twój koszyk",
   "contactData": "Dane kontaktowe"
 }
