SM-58 improvements after CR

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -2,10 +2,10 @@
   "opinion": "“These are great sticks. I don't want any others more. My conductor is finally happy, only Smallets!”",
   "subtitle": "Discover products",
   "more": "Do you want to know more?",
-  "contactForm": "Contact me using the contact form:",
+  "contactForm": "Contact me:",
   "send": "SEND MESSAGE",
   "emailError": "Please enter a valid email address",
-  "emailError2": "Email address is required",
+  "emailError2": "Please, add your email",
   "message": "The message must be min. 50 characters",
   "message2": "Please enter your message"
 }
