SM-58 Final amendments

--- a/public/locales/pl/home.json
+++ b/public/locales/pl/home.json
@@ -8,5 +8,5 @@
   "emailError2": "Adres email jest wymagany",
   "message": "Wiadomość musi mieć min. 50 znaków",
   "message2": "Wpisz wiadomość",
-  "modal": "Dziękuję za wiadomość. Odpowiem najszybciej jak to możliwe."
+  "modal": "Dziękujemy za wiadomość. Odpowiemy najszybciej jak to możliwe."
 }
