SM-61 removed reset form, shrinked errors font-size

--- a/public/locales/en/login.json
+++ b/public/locales/en/login.json
@@ -1,5 +1,5 @@
 {
-  "loginText": "Do you have an account? Log in:",
+  "loginText": "Do you have an account?",
   "password": "password",
   "login": "LOGIN",
   "forgot": "Have you forgotten your password?",
