--- a/public/locales/pl/login.json
+++ b/public/locales/pl/login.json
@@ -1,5 +1,5 @@
 {
-  "loginText": "Masz konto? Zaloguj się:",
+  "loginText": "Masz konto?",
   "password": "hasło",
   "login": "ZALOGUJ SIĘ",
   "forgot": "Zapomniałeś hasła?",
