--- a/public/locales/pl/productCard.json
+++ b/public/locales/pl/productCard.json
@@ -1,6 +1,6 @@
 {
   "pair": "para",
-  "headDiameter": "Srednica główki",
+  "headDiameter": "Średnica główki",
   "stickLength": "Długość kijka",
   "addToCart": "Dodaj do koszyka"
 }
