--- a/public/locales/en/login.json
+++ b/public/locales/en/login.json
@@ -8,5 +8,7 @@
   "continue": "CONTINUE AS A GUEST",
   "emailError": "Please enter a valid email address",
   "emailError2": "Please, add your email",
-  "password2": "Password is required"
+  "password2": "Password is required",
+  "modalOk": "You are log in.",
+  "modalBad": "Something went wrong. Please try again later."
 }
