SM-63 Checkbox In Progress

--- a/public/locales/en/deliveryForm.json
+++ b/public/locales/en/deliveryForm.json
@@ -13,5 +13,5 @@
   "errNoStreetAndHouseNr": "Street and house number are required",
   "errNoStreetAndHouseNr1": "Min. 6 characters",
   "errNoPostalCode": "Postal Code is required",
-  "errNoPostalCode1": "Postal Code must consist of min. 4 characters"
+  "errPostalCode": "Postal Code must consist of min. 4 characters"
 }
