--- a/public/locales/pl/navAndFooter.json
+++ b/public/locales/pl/navAndFooter.json
@@ -5,5 +5,6 @@
   "contact": "kontakt",
   "login": "zaloguj",
   "cart": "twój koszyk",
-  "contactData": "Dane kontaktowe"
+  "contactData": "Dane kontaktowe",
+  "mock": "mock"
 }
