--- a/public/locales/en/registerForm.json
+++ b/public/locales/en/registerForm.json
@@ -1,6 +1,7 @@
 {
   "name": "Name",
   "lastname": "Lastname",
+  "phoneNumber": "Phone number",
   "email": "Email address",
   "password": "Password",
   "register": "REGISTER",
@@ -11,12 +12,14 @@
   "errNoLastname": "Enter your lastname",
   "errLastname": "Lastname must consist of min. 3 characters",
   "errLastname2": "Lastname must consist of max. 15 characters",
+  "errNoPhone": "Enter your phone number (optional)",
+  "errPhone": "Invalid phone number entered",
   "errNoEmail": "Email address is required",
   "errEmail": "Invalid email address",
   "errNoPassword": "Password is required",
   "errPassword1": "Password must consist of min. 8 characters",
   "errPassword2": "Diacritical characters are not allowed",
   "===": "===",
-  "errAccountP1": "Looks like you already have an account. Try to log in again.",
-  "errAccountP2": "Recover forgotten password."
+  "errAccountP1": "Error occurred. Try to log in again or",
+  "errAccountP2": "recover forgotten password."
 }
