--- a/public/locales/en/registerForm.json
+++ b/public/locales/en/registerForm.json
@@ -18,7 +18,7 @@
   "errEmail": "Invalid email address",
   "errNoPassword": "Password is required",
   "errPassword1": "Password must consist of min. 8 characters",
-  "errPassword2": "Diacritical characters are not allowed",
+  "errPassword2": "Diacritical characters are not allowed, use letters and numbers with no special characters",
   "===": "===",
   "errAccountP1": "Error occurred. Try to log in again or",
   "errAccountP2": "recover forgotten password."
