SM-57 added more translations

--- a/public/locales/en/breadcrumbs.json
+++ b/public/locales/en/breadcrumbs.json
@@ -1,8 +1,8 @@
 {
   "home": "Home",
   "login": "Login",
-  "about": "About",
-  "contact": "Contakt",
+  "about": "About me",
+  "contact": "Contact",
   "series": "Series",
   "products": "Products",
   "service": "Service",
