--- a/public/locales/pl/login.json
+++ b/public/locales/pl/login.json
@@ -9,6 +9,6 @@
   "emailError": "Wpisz poprawny adres email",
   "emailError2": "Adres email jest wymagany",
   "password2": "Hasło jest wymagane",
-  "modalOk": "Jesteś zalogowany.",
-  "modalBad": "Coś poszło nie tak.Spróbuj ponownie później"
+  "toastOk": "Jesteś zalogowany.",
+  "toastBad": "Coś poszło nie tak.Spróbuj ponownie później"
 }
