--- a/public/locales/pl/login.json
+++ b/public/locales/pl/login.json
@@ -9,6 +9,7 @@
   "emailError": "Wpisz poprawny adres email",
   "emailError2": "Adres email jest wymagany",
   "password2": "Hasło jest wymagane",
+  "toast": "Sprawdzamy Twoje dane",
   "toastOk": "Jesteś zalogowany.",
   "toastBad": "Coś poszło nie tak.Spróbuj ponownie później"
 }
