SM-63 Erased mock nav link

--- a/public/locales/pl/navAndFooter.json
+++ b/public/locales/pl/navAndFooter.json
@@ -5,6 +5,5 @@
   "contact": "kontakt",
   "login": "zaloguj",
   "cart": "twój koszyk",
-  "contactData": "Dane kontaktowe",
-  "mock": "mock"
+  "contactData": "Dane kontaktowe"
 }
