--- a/public/locales/en/navAndFooter.json
+++ b/public/locales/en/navAndFooter.json
@@ -6,5 +6,6 @@
   "login": "log in",
   "cart": "your cart",
   "contactData": "Contact data",
-  "toastOut": "You are log out"
+  "toastOut": "You are log out",
+  "logout": "logout"
 }
