SM-61 login-form (#15)
* SM-61 removed mock loader

* SM-61 work in progress

* SM-61 added translations to login page, more styling

* SM-61 added reset form

* SM-61 language issues

* SM-61 i18n improvements

* SM-61 added more styling

* SM-61 dimension improvements

* SM-61 hover improvements

* SM-61 removed reset form, shrinked errors font-size

* SM-61 added redux login logic, modal

* SM-61 added added mock login/logoutl

* SM-61 work in progress

* SM-61 changed fetch to vercel

* SM-61 moved authSlice to separate file

* SM-61 added persist package and toast, removed modal and some comments

* SM-61 removed persist package

* SM-61 moved toast to onSubmit

* SM-61 in progress

* SM-61 toast message

* SM-61 in progress 2

* SM-61 in progress

* SM-61 improve link to series

* SM-61changed buttons to links, removed comments and margin top from errors

* SM-61 little improvements

* SM-61 added userLogout

* SM-61 Logout and styles

* SM-77 logout button improvements

* SM-61 Login Page styles and Nav logout handler added

* SM-61 improvements

Co-authored-by: WeronikaBL <weronika@datenexperten.com>
Co-authored-by: Tomasz <skretkowskitomasz@gmail.com>

--- a/public/locales/pl/navAndFooter.json
+++ b/public/locales/pl/navAndFooter.json
@@ -5,5 +5,7 @@
   "contact": "kontakt",
   "login": "zaloguj",
   "cart": "twój koszyk",
-  "contactData": "Dane kontaktowe"
+  "contactData": "Dane kontaktowe",
+  "toastOut": "Zostałeś wylogowany",
+  "logout": "wyloguj"
 }
