SM-75 added translations

--- a/public/locales/en/others.json
+++ b/public/locales/en/others.json
@@ -1,3 +1,9 @@
 {
-  "textOnSeries": "S.mallets sticks are an excellent quality product that responds to the needs of professionals."
+  "textOnSeries": "S.mallets sticks are an excellent quality product that responds to the needs of professionals.",
+  "service": "Service",
+  "motto": "Nothing is impossible for us. We will fix all the sticks.",
+  "doubts": "Do you have doubts? Contact us.",
+  "contact": "Contact",
+  "before": "Before",
+  "after": "After"
 }
