--- a/public/locales/pl/others.json
+++ b/public/locales/pl/others.json
@@ -1,3 +1,9 @@
 {
-  "textOnSeries": "Pałeczki S.mallets to doskonałej jakości produkt, który jest odpowiedzią na potrzeby profesjonalistów."
+  "textOnSeries": "Pałeczki S.mallets to doskonałej jakości produkt, który jest odpowiedzią na potrzeby profesjonalistów.",
+  "service": "Serwis",
+  "motto": "Dla nas nie ma rzeczy niemożliwych. Naprawimy wszystkie pałeczki.",
+  "doubts": "Masz wątpliwości? Skontaktuj się z nami.",
+  "contact": "Kontakt",
+  "before": "Przed",
+  "after": "Po"
 }
