SM-77 added translations to toasts

--- a/public/locales/en/others.json
+++ b/public/locales/en/others.json
@@ -5,5 +5,7 @@
   "doubts": "Do you have doubts? Contact us.",
   "contact": "Contact",
   "before": "Before",
-  "after": "After"
+  "after": "After",
+  "toasOk": "Data downloaded.",
+  "toastBad": "Something went wrong. Please try again later."
 }
