SM-77 removed mock series

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -8,5 +8,7 @@
   "emailError2": "Please, add your email",
   "message": "The message must be min. 50 characters",
   "message2": "Please enter your message",
-  "modal": "Thank you for your message. We will reply as soon as possible."
+  "modal": "Thank you for your message. We will reply as soon as possible.",
+  "toasOk": "Data downloaded.",
+  "toastBad": "Something went wrong. Please try again later."
 }
