SM-80 Type o fixes and fetch url fixed

--- a/public/locales/en/navAndFooter.json
+++ b/public/locales/en/navAndFooter.json
@@ -8,5 +8,5 @@
   "contactData": "Contact data",
   "toastOut": "You are log out",
   "logout": "logout",
-  "user": "My account"
+  "user": "my account"
 }
