--- a/public/locales/pl/navAndFooter.json
+++ b/public/locales/pl/navAndFooter.json
@@ -8,5 +8,5 @@
   "contactData": "Dane kontaktowe",
   "toastOut": "Zostałeś wylogowany",
   "logout": "wyloguj",
-  "user": "Moje konto"
+  "user": "moje konto"
 }
