--- a/public/locales/en/deliveryForm.json
+++ b/public/locales/en/deliveryForm.json
@@ -2,12 +2,12 @@
   "name": "Name",
   "lastname": "Lastname",
   "email": "email",
-  "streetAndHouseNr": "Street and House number",
-  "postalCode": "Postal Code",
+  "streetAndNumber": "Street and House number",
+  "zipCode": "Postal Code",
   "city": "City",
   "country": "Country",
   "phoneNumber": "Phone Number",
-  "additional": "Additional data",
+  "messageFromUser": "messageFromUser data",
   "aggrementText": "I agree for the processing of my data",
   "confirmData": "Confirm Contact Data",
   "errNoName": "Enter your name",
@@ -18,16 +18,16 @@
   "errLastname2": "Lastname must consist of max. 15 characters",
   "errNoEmail": "Email address is required",
   "errEmail": "This is not a valid email address",
-  "errNoStreetAndHouseNr": "Street and house number are required",
-  "errStreetAndHouseNr": "Min. 6 characters",
-  "errNoPostalCode": "Postal Code is required",
-  "errPostalCode": "Postal Code must consist of min. 4 characters",
+  "errNoStreetAndNumber": "Street and house number are required",
+  "errStreetAndNumber": "Min. 6 max. 20 characters",
+  "errNoZipCode": "Postal Code is required",
+  "errZipCode": "Postal Code must consist of min. 4 characters",
   "errNoCity": "City name is required",
   "errCity": "City name must consist of min. 4 characters",
   "errNoCountry": "Country name is required",
   "errCountry": "Country name must consist of min. 4 and max 15 chars",
   "errNoPhoneNumber": "Phone Number is required",
   "errPhoneNumber": "Phone number is not valid",
-  "errAdditional": "Maximum 120 characters",
+  "errMessageFromUser": "Maximum 120 characters",
   "errCondition": "You must agree for the processing of Your data"
 }
