SM-72 Added: Mock Fetch, translations. Validation rules unified with backend.

--- a/public/locales/en/deliveryForm.json
+++ b/public/locales/en/deliveryForm.json
@@ -7,9 +7,9 @@
   "city": "City",
   "country": "Country",
   "phoneNumber": "Phone Number",
-  "messageFromUser": "messageFromUser data",
+  "messageFromUser": "More info",
   "aggrementText": "I agree for the processing of my data",
-  "confirmData": "Confirm Contact Data",
+  "confirmData": "Confirm",
   "errNoName": "Enter your name",
   "errName": "Name must consist of min. 3 characters",
   "errName2": "Name must consist of max. 15 characters",
@@ -21,7 +21,7 @@
   "errNoStreetAndNumber": "Street and house number are required",
   "errStreetAndNumber": "Min. 6 max. 20 characters",
   "errNoZipCode": "Postal Code is required",
-  "errZipCode": "Postal Code must consist of min. 4 characters",
+  "errZipCode": "Postal Code must consist of min. 4 max. 15 characters",
   "errNoCity": "City name is required",
   "errCity": "City name must consist of min. 4 characters",
   "errNoCountry": "Country name is required",
