--- a/public/locales/pl/deliveryForm.json
+++ b/public/locales/pl/deliveryForm.json
@@ -1,7 +1,7 @@
 {
   "name": "Imię",
   "lastname": "Nazwisko",
-  "email": "email",
+  "email": "Email",
   "streetAndNumber": "Ulica i numer domu",
   "zipCode": "Kod pocztowy",
   "city": "Miasto",
@@ -9,7 +9,7 @@
   "phoneNumber": "Numer Telefonu",
   "messageFromUser": "Dodatkowe informację",
   "aggrementText": "Wyrażam zgodę na przetwarzanie danych",
-  "confirmData": "Zatwierdź dane kontaktowe",
+  "confirmData": "Zatwierdź dane",
   "errNoName": "Wpisz swoje imię",
   "errName": "Imię musi się składac z min. 3 znaków",
   "errName2": "Imię musi się składac z max. 15 znaków",
@@ -21,7 +21,7 @@
   "errNoStreetAndNumber": "Podaj ulice i numer domu",
   "errStreetAndNumber": "Minimum 6 max. 20 znaków",
   "errNoZipCode": "Podaj kod pocztowy",
-  "errZipCode": "Kod pocztowy musi się składać z min. 4 znaków",
+  "errZipCode": "Kod pocztowy musi się składać z min. 4 max. 15 znaków",
   "errNoCity": "Podaj miasto",
   "errCity": "Nazwa miasta musi się składać z min. 4 znaków",
   "errNoCountry": "Podaj kraj",
