--- a/public/locales/pl/deliveryForm.json
+++ b/public/locales/pl/deliveryForm.json
@@ -7,7 +7,7 @@
   "city": "Miasto",
   "country": "Kraj",
   "phoneNumber": "Numer Telefonu",
-  "messageFromUser": "Dodatkowe informację",
+  "messageFromUser": "Dodatkowe informacje",
   "aggrementText": "Wyrażam zgodę na przetwarzanie danych",
   "confirmData": "Zatwierdź dane",
   "errNoName": "Wpisz swoje imię",
