SM-62 fix: variety

--- a/public/locales/en/registerForm.json
+++ b/public/locales/en/registerForm.json
@@ -12,13 +12,13 @@
   "errNoLastname": "Enter your lastname",
   "errLastname": "Lastname must consist of min. 3 characters",
   "errLastname2": "Lastname must consist of max. 15 characters",
-  "errNoPhone": "Enter your phone number (optional)",
+  "errNoPhone": "Enter your phone number",
   "errPhone": "Invalid phone number entered",
   "errNoEmail": "Email address is required",
   "errEmail": "Invalid email address",
   "errNoPassword": "Password is required",
   "errPassword1": "Password must consist of min. 8 characters",
-  "errPassword2": "Diacritical characters are not allowed, use letters and numbers with no special characters",
+  "errPassword2": "Diacritical characters are not allowed",
   "===": "===",
   "errAccountP1": "Error occurred. Try to log in again or",
   "errAccountP2": "recover forgotten password."
