--- a/public/locales/pl/registerForm.json
+++ b/public/locales/pl/registerForm.json
@@ -12,13 +12,13 @@
   "errNoLastname": "Wpisz nazwisko",
   "errLastname": "Nazwisko musi się składać z nim. 3 znaków",
   "errLastname2": "Nazwisko może się składać max. z 15 znaków",
-  "errNoPhone": "Podaj kontaktowy nr telefonu (opcjonalnie)",
+  "errNoPhone": "Podaj kontaktowy nr telefonu",
   "errPhone": "Wpisałes niepoprawny numer telefonu",
   "errNoEmail": "Adres email jest wymagany",
   "errEmail": "Niepoprawny adres email",
   "errNoPassword": "Hasło jest wymagane",
   "errPassword1": "Hasło musi się składać z nim. 8 znaków",
-  "errPassword2": "Znaki specjalne są niedozwolone - używaj cyfr i liter bez polskich znaków.",
+  "errPassword2": "Hasło musi zawierać literę, cyfrę i jeden znak specjalny.",
   "===": "===",
   "errAccountP1": "Wystąpił błąd. Jeśli jesteś pewien, że podałeś właściwe dane,",
   "errAccountP2": "spróbuj zalogować się lub zresetuj hasło"
