products are filtered by seriesname in productpage, added toast when adding product to the cart, refactor of cart code, added product counter in redux cartSlice, added line with summary

--- a/public/locales/en/productCard.json
+++ b/public/locales/en/productCard.json
@@ -2,5 +2,6 @@
   "pair": "pair",
   "headDiameter": "Head Diameter",
   "stickLength": "Stick Length",
-  "addToCart": "Add to cart"
+  "addToCart": "Add to cart",
+  "productAddedToCart": "Product added to cart"
 }
