SM-82 work in progress

--- a/public/locales/en/summary.json
+++ b/public/locales/en/summary.json
@@ -1,5 +1,6 @@
 {
   "yourOrder": "Your order",
+  "yourOrders": "Your orders",
   "edit": "edit",
   "shippingData": "Shipping Data",
   "confirmation": "Confirm Your order",
