--- a/public/locales/pl/summary.json
+++ b/public/locales/pl/summary.json
@@ -1,5 +1,6 @@
 {
   "yourOrder": "Twoje zamówienie",
+  "yourOrders": "Twoje zamówienia",
   "edit": "edytuj",
   "shippingData": "Dane do wysyłki",
   "confirmation": "Potwierdź zamówienie",
