SM-82 work in progress

--- a/public/locales/en/summary.json
+++ b/public/locales/en/summary.json
@@ -3,6 +3,7 @@
   "yourOrders": "Your orders",
   "edit": "edit",
   "shippingData": "Shipping Data",
+  "yourData": "Your Data",
   "confirmation": "Confirm Your order",
   "toast": "We are checking your data",
   "toasOk": "Data has been accepted",
