--- a/public/locales/pl/summary.json
+++ b/public/locales/pl/summary.json
@@ -1,6 +1,7 @@
 {
   "yourOrder": "Twoje zamówienie",
   "yourOrders": "Twoje zamówienia",
+  "yourData": "Twoje dane",
   "edit": "edytuj",
   "shippingData": "Dane do wysyłki",
   "confirmation": "Potwierdź zamówienie",
