--- a/public/locales/en/summary.json
+++ b/public/locales/en/summary.json
@@ -7,5 +7,7 @@
   "confirmation": "Confirm Your order",
   "toast": "We are checking your data",
   "toasOk": "Data has been accepted",
-  "toastBad": "Something went wrong. Please try again later."
+  "toastBad": "Something went wrong. Please try again later.",
+  "order": "Order",
+  "more": "more info"
 }
