--- a/public/locales/en/registerForm.json
+++ b/public/locales/en/registerForm.json
@@ -18,8 +18,9 @@
   "errNoPassword": "Password is required",
   "errPassword1": "Password must consist of min. 8 characters",
   "errPassword2": "Passworrd must consist of a letter, number and a special character",
-  "errAccountP1": "Error occurred. Try to log in again or",
-  "errAccountP2": "recover forgotten password.",
+  "errAccountP1": "Error occured. If you are sure that you have provided the correct data,",
+  "errAccountP2a": "try to log in or",
+  "errAccountP2b": " reset your password",
   "toastOk": "You've been registered.",
   "toastBad": "Ups, something went wrong. Try again later"
 }
