--- a/public/locales/pl/registerForm.json
+++ b/public/locales/pl/registerForm.json
@@ -19,7 +19,8 @@
   "errPassword1": "Hasło musi się składać z nim. 8 znaków",
   "errPassword2": "Hasło musi zawierać literę, cyfrę i jeden znak specjalny.",
   "errAccountP1": "Wystąpił błąd. Jeśli jesteś pewien, że podałeś właściwe dane,",
-  "errAccountP2": "spróbuj zalogować się lub zresetuj hasło",
+  "errAccountP2a": "spróbuj zalogować się lub",
+  "errAccountP2b": "zresetuj hasło",
   "toastOk": "Zostałeś zarejestrowany",
   "toastBad": "Coś poszło nie tak. Spróbuj ponownie później"
 }
